sumo/tests/netgen/grid/errors/grid_y_length__zero/options.netgen
--grid --grid.number=10 --grid.y-length=0 --output-file=net.net.xml
